build/i2c/tests/snapshots/codegen__controllers.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_controllers)"
---
#[allow(dead_code)]
pub const NCONTROLLERS: usize = 2;
use drv_stm32xx_i2c::I2cController;
pub fn controllers() -> [I2cController<'static>; NCONTROLLERS] {
    use drv_stm32xx_sys_api::Peripheral;
    use drv_i2c_api::Controller;
    use stm32h7::stm32h753 as device;
    [
        I2cController {
            controller: Controller::I2C2,
            peripheral: Peripheral::I2c2,
            notification: crate::notifications::I2C2_IRQ_MASK,
            registers: unsafe { &*device::I2C2::ptr() },
        },
        I2cController {
            controller: Controller::I2C3,
            peripheral: Peripheral::I2c3,
            notification: crate::notifications::I2C3_IRQ_MASK,
            registers: unsafe { &*device::I2C3::ptr() },
        },
    ]
}
