build/i2c/tests/snapshots/codegen__device_with_mux_and_name.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_devices)"
---
pub mod devices {
    #[allow(unused_imports)]
    use drv_i2c_api::{I2cDevice, Controller, PortIndex};
    #[allow(unused_imports)]
    use userlib::TaskId;
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    #[allow(unused_doc_comments)]
    pub fn device_by_index(task: TaskId, index: usize) -> Option<I2cDevice> {
        match index {
            /// a muxed temperature sensor
            0 => {
                Some(
                    I2cDevice::new(
                        task,
                        Controller::I2C3,
                        PortIndex(0),
                        Some((drv_i2c_api::Mux::M2, drv_i2c_api::Segment::S3)),
                        0x48,
                    ),
                )
            }
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_controller(index: usize) -> Option<Controller> {
        match index {
            0..=0 => Some(Controller::I2C3),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_port(index: usize) -> Option<PortIndex> {
        match index {
            0..=0 => Some(PortIndex(0)),
            _ => None,
        }
    }
    /// a muxed temperature sensor
    #[allow(dead_code)]
    pub fn tmp117(task: TaskId) -> [I2cDevice; 1] {
        [
            I2cDevice::new(
                task,
                Controller::I2C3,
                PortIndex(0),
                Some((drv_i2c_api::Mux::M2, drv_i2c_api::Segment::S3)),
                0x48,
            ),
        ]
    }
    /// a muxed temperature sensor
    #[allow(dead_code)]
    pub fn tmp117_north(task: TaskId) -> I2cDevice {
        I2cDevice::new(
            task,
            Controller::I2C3,
            PortIndex(0),
            Some((drv_i2c_api::Mux::M2, drv_i2c_api::Segment::S3)),
            0x48,
        )
    }
    /// a muxed temperature sensor
    #[allow(dead_code)]
    pub fn tmp117_j1_u7(task: TaskId) -> I2cDevice {
        I2cDevice::new(
            task,
            Controller::I2C3,
            PortIndex(0),
            Some((drv_i2c_api::Mux::M2, drv_i2c_api::Segment::S3)),
            0x48,
        )
    }
}
