build/i2c/tests/snapshots/codegen__match_arm_ranges_are_coalesced.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_devices)"
---
pub mod devices {
    #[allow(unused_imports)]
    use drv_i2c_api::{I2cDevice, Controller, PortIndex};
    #[allow(unused_imports)]
    use userlib::TaskId;
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    #[allow(unused_doc_comments)]
    pub fn device_by_index(task: TaskId, index: usize) -> Option<I2cDevice> {
        match index {
            /// device 0
            0 => Some(I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x48)),
            /// device 1
            1 => Some(I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x49)),
            /// device 2
            2 => Some(I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4a)),
            /// device 3
            3 => Some(I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4b)),
            /// device 4
            4 => Some(I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4c)),
            /// device 5
            5 => Some(I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4d)),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_controller(index: usize) -> Option<Controller> {
        match index {
            0..=2 | 5..=5 => Some(Controller::I2C2),
            3..=4 => Some(Controller::I2C3),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_port(index: usize) -> Option<PortIndex> {
        match index {
            0..=5 => Some(PortIndex(0)),
            _ => None,
        }
    }
    /// device 0
    /// device 1
    /// device 2
    /// device 3
    /// device 4
    /// device 5
    #[allow(dead_code)]
    pub fn tmp117(task: TaskId) -> [I2cDevice; 6] {
        [
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x48),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x49),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4a),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4b),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4c),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4d),
        ]
    }
    /// device 0
    /// device 1
    /// device 2
    /// device 5
    #[allow(dead_code)]
    pub fn tmp117_bus1(task: TaskId) -> [I2cDevice; 4] {
        [
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x48),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x49),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4a),
            I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x4d),
        ]
    }
    /// device 3
    /// device 4
    #[allow(dead_code)]
    pub fn tmp117_solo(task: TaskId) -> [I2cDevice; 2] {
        [
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4b),
            I2cDevice::new(task, Controller::I2C3, PortIndex(0), None, 0x4c),
        ]
    }
}
