build/i2c/tests/snapshots/codegen__muxes.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_muxes)"
---
#[allow(dead_code)]
pub const NMUXEDBUSES: usize = 1;
use drv_stm32xx_i2c::I2cMux;
pub fn muxes() -> [I2cMux<'static>; 2] {
    use drv_i2c_api::{Controller, PortIndex, Mux};
    #[allow(unused_imports)]
    use drv_stm32xx_sys_api::{self as gpio_api, Alternate};
    [
        I2cMux {
            controller: Controller::I2C3,
            port: PortIndex(0),
            id: Mux::M1,
            driver: &drv_stm32xx_i2c::pca9548::Pca9548,
            nreset: None,
            address: 0x70,
        },
        I2cMux {
            controller: Controller::I2C3,
            port: PortIndex(0),
            id: Mux::M2,
            driver: &drv_stm32xx_i2c::ltc4306::Ltc4306,
            nreset: Some(I2cGpio {
                gpio_pins: gpio_api::Port::G.pin(5),
            }),
            address: 0x44,
        },
    ]
}
