build/i2c/tests/snapshots/codegen__non_pmbus_power.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_devices)"
---
pub mod devices {
    #[allow(unused_imports)]
    use drv_i2c_api::{I2cDevice, Controller, PortIndex};
    #[allow(unused_imports)]
    use userlib::TaskId;
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    #[allow(unused_doc_comments)]
    pub fn device_by_index(task: TaskId, index: usize) -> Option<I2cDevice> {
        match index {
            /// a hot swap controller
            0 => Some(I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x16)),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_controller(index: usize) -> Option<Controller> {
        match index {
            0..=0 => Some(Controller::I2C2),
            _ => None,
        }
    }
    #[allow(dead_code)]
    #[allow(clippy::match_single_binding)]
    pub fn lookup_port(index: usize) -> Option<PortIndex> {
        match index {
            0..=0 => Some(PortIndex(0)),
            _ => None,
        }
    }
    /// a hot swap controller
    #[allow(dead_code)]
    pub fn lm5066i(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x16)]
    }
    /// a hot swap controller
    #[allow(dead_code)]
    pub fn lm5066i_bus1(task: TaskId) -> [I2cDevice; 1] {
        [I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x16)]
    }
}
pub mod pmbus {
    use drv_i2c_api::{I2cDevice, Controller, PortIndex};
    use userlib::TaskId;
    /// a hot swap controller
    #[allow(dead_code)]
    pub fn v54(task: TaskId) -> (I2cDevice, Option<u8>) {
        (I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x16), None)
    }
    #[allow(dead_code)]
    pub const LM5066I_V54_PHASES: Option<&'static [u8]> = None;
}
pub mod power {
    use drv_i2c_api::{I2cDevice, Controller, PortIndex};
    use userlib::TaskId;
    /// a hot swap controller
    #[allow(dead_code)]
    pub fn v54(task: TaskId) -> (I2cDevice, Option<u8>) {
        (I2cDevice::new(task, Controller::I2C2, PortIndex(0), None, 0x16), None)
    }
}
