build/i2c/tests/snapshots/codegen__pins.snap
---
source: build/i2c/tests/codegen.rs
expression: "f.section(Codegen::generate_pins)"
---
#[allow(unused_imports)]
use drv_stm32xx_i2c::{I2cPins, I2cGpio};
pub fn pins() -> [I2cPins; 3] {
    use drv_i2c_api::{Controller, PortIndex};
    use drv_stm32xx_sys_api::{self as gpio_api, Alternate};
    [
        I2cPins {
            controller: Controller::I2C2,
            port: PortIndex(0),
            scl: gpio_api::Port::B.pin(10),
            sda: gpio_api::Port::B.pin(11),
            function: Alternate::AF4,
        },
        I2cPins {
            controller: Controller::I2C2,
            port: PortIndex(1),
            scl: gpio_api::Port::H.pin(12),
            sda: gpio_api::Port::H.pin(13),
            function: Alternate::AF4,
        },
        I2cPins {
            controller: Controller::I2C3,
            port: PortIndex(0),
            scl: gpio_api::Port::A.pin(1),
            sda: gpio_api::Port::A.pin(2),
            function: Alternate::AF4,
        },
    ]
}
